<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/SwipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".MainActivity">
        <!--settingsIcon-->
        <ImageView
            android:id="@+id/mSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:alpha=".5"
            android:contentDescription="@string/todo"
            android:padding="5dp"
            android:src="@drawable/ic_settings" />
        <!--background Sun-->
        <ImageView
            android:id="@+id/sunBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            android:scaleX=".5"
            android:scaleY=".5"
            android:src="@drawable/sun" />
        <!--Network Error Icon-->
        <ImageView
            android:id="@+id/networkErrorIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:alpha=".7"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_network_error"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/linearLayoutMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:alpha=".7"
            android:visibility="visible"
            android:weightSum="7">


            <!--Clock-->
            <TextClock
                android:id="@+id/mMainClock"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:format12Hour="h:mm aa"
                android:gravity="center"
                android:textColor="@color/DayTextColor"
                android:textSize="80sp"
                android:textStyle="normal"
                android:fontFamily="@font/exo_thin"
                android:timeZone="GMT+5" />

            <!--RelativeLayout1-->
            <RelativeLayout
                android:id="@+id/relative_layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/mSunRise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/exo_thin"
                    android:text="@string/sunrise"
                    android:textColor="@color/DayTextColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/mSunRiseClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/exo_light"
                    android:text="@string/sunrise"
                    android:textColor="@color/DayTextColor"
                    android:textSize="@dimen/text_size"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:alpha=".5"
                android:src="@drawable/line"
                tools:ignore="ContentDescription" />
            <!--RelativeLayout2-->
            <RelativeLayout
                android:id="@+id/relative_layout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mSunSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/exo_thin"
                    android:text="@string/sunset"
                    android:textColor="@color/DayTextColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/mSunSetClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/exo_light"
                    android:text="@string/sunrise"
                    android:textColor="@color/DayTextColor"
                    android:textSize="@dimen/text_size"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:alpha=".5"
                android:src="@drawable/line"
                tools:ignore="ContentDescription" />
            <!--RelativeLayout3-->
            <RelativeLayout
                android:id="@+id/relative_layout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/mMidnight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/exo_thin"
                    android:text="@string/midnight"
                    android:textColor="@color/DayTextColor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/mMidnightClock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/exo_light"
                    android:text="@string/sunrise"
                    android:textColor="@color/DayTextColor"
                    android:textSize="@dimen/text_size"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:alpha=".5"
                android:src="@drawable/line"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/mDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/exo_thin"
                    android:text="@string/app_name"
                    android:textColor="@color/DayTextColor"
                    android:textSize="30sp" />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>